version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/CommandReal.rst.txt
.. vale off



:class:`CommandReal`
====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.CommandReal(iReal: Ansys.Common.Interop.FEParsePlugin_ANSYS.IReal)

   Bases: :py:obj:`object`


   
   Represent a real constant set associated to a RLBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandReal

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Id`
            - Gets the real constant set number.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Id
   :type: Optional[int]


   
   Gets the real constant set number.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on